# ok

./: Makefile  README.md  data.dvc  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ok/: __init__.py  dataset.py  features.py  plots.py
ok/modeling/: predict.py  train.py
